chore: paagination response distribution & mapper type in service layer
