# src/main/java/com/example/appevecommon/Service/Utilities/Responses/Pagination.java
@@ -1,0 +1,9 @@
+package com.example.appevecommon.Service.Utilities.Responses;
+
+public record Pagination(
+        int page,
+        int size,
+        long totalItems,
+        int totalPages
+) {
+}
