# src/main/java/com/example/appevecommon/Service/Utilities/Responses/ResponseFactory.java
@@ -1,5 +1,7 @@
 package com.example.appevecommon.Service.Utilities.Responses;
 
+import java.util.List;
+
 public final class ResponseFactory {
     private static final String DEFAULT_SUCCESS_MESSAGE = "Operación exitosa";
     private static final int DEFAULT_ERROR_STATUS = 500;
@@ -9,15 +11,15 @@ public final class ResponseFactory {
 
     //OK
     public static <T> Response<T> ok(T data) {
-        return new Response<>(true, DEFAULT_SUCCESS_MESSAGE, data);
+        return new Response<>(true, null, data);
     }
 
     public static <T> Response<T> ok(String message, T data) {
         return new Response<>(true, message, data);
     }
 
-    public static <T> Response<PageResult<T>> ok(PageResult<T> data) {
-        return new Response<>(true, DEFAULT_SUCCESS_MESSAGE, data);
+    public static <T> Response<List<T>> ok(PageResult<T> data) {
+        return new Response<>(true, null, data.items(), data.pagination());
     }
 
     //NOT OK
